新增角色时增加清除缓存的条目

--- a/src/main/resources/static/pages/Service/expenseLookOver/expenseList.html
+++ b/src/main/resources/static/pages/Service/expenseLookOver/expenseList.html
@@ -54,6 +54,9 @@
 					<div v-if="item.state==='未通过'">
 						<button class="layui-btn layui-btn-sm layui-btn-danger" >{{ item.state }}</button>
 					</div>
+					<div v-if="item.state==='未审核'">
+						<button class="layui-btn layui-btn-sm layui-btn-danger" >{{ item.state }}</button>
+					</div>
 				</td>
 				<td class="td-manage">
 					<button class="layui-btn layui-btn-default layui-btn-xs"
