新增渲染请求响应体相应数据方法，日志打印前增加用户账号标识

--- a/src/main/resources/static/pages/login.html
+++ b/src/main/resources/static/pages/login.html
@@ -71,6 +71,7 @@
                    window.location.href="/"+result.data.url;
 			   }else {
                   messageError(result.data.message);
+                  this.loginUser.upwd="";
 			   }
            },function(res){
 
